# munge

./: .gitignore  .travis.yml  README.md  go.mod  go.sum  makefile
.github/workflows/: go.yml
capitalise/: capitalise.go  capitalise.pb.go
capitalise/cmd/: dockerfile  main.go
frontend/: dockerfile  main.go
frontend/reverse/: reverse.proto
proto/: capitalise.proto
reverse/: Cargo.toml  build.rs  dockerfile  reverse.go  reverse.pb.go
reverse/cmd/: dockerfile  main.go
reverse/src/: lib.rs  reverse.rs  reverse_grpc.rs
