[package]
name = "reverse"
version = "0.1.0"
authors = ["tophatsteve <steve@codebazaar.co.uk>"]

[dependencies]
grpc            = "~0.4"
protobuf        = "~1.6"
futures         = "~0.1"
futures-cpupool = "~0.1"
tls-api         = "0.1.*"
log             = "0.4.0"
env_logger      = "0.5.10"

[build-dependencies]
protoc-rust-grpc = "0.5.0"